<resources>
    <string name="app_name">Quicker</string>
    <string name="str1">测试1</string>
    <string name="str2">测试2</string>
    <string name="str3">测试3</string>
    <string name="button">button</string>
    <string name="open_list">添加快捷方式</string>
    <string name="sure">确认</string>
    <string name="cancel">关闭</string>
    <string name="setting">设置</string>
    <string name="row">行</string>
    <string name="column">列</string>
    <string name="row_column">选择展示行列数</string>
    <string name="delete">删除</string>
    <string name="moveup">上移</string>
    <string name="movedown">下移</string>
    <string name="last_page">上一页</string>
    <string name="next_page">下一页</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="float_switch">打开/关闭悬浮球</string>
    <string name="save_switch">是否自动保存</string>
    <string name="search">搜索..</string>
</resources>